force-app/main/default/objects/skilljar__Course_Progress__c/skilljar__Course_Progress__c.object-meta.xml
<CustomObject>
    <description>Tracks a Student&apos;s progress through a Course</description>
    <label>Course Progress</label>
    <nameField>
        <label>Course Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>