force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Certificate_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Certificate_Code__c</fullName>
    <label>Certificate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>