force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Certificate_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Certificate_Expires_At__c</fullName>
    <label>Certificate Expires At</label>
    <type>DateTime</type>
</CustomField>