force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Certificate_Validation_Url__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Certificate_Validation_Url__c</fullName>
    <description>Verification URL of the certificate</description>
    <label>Certificate Validation Url</label>
    <type>Url</type>
</CustomField>