force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Completed_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Completed_At__c</fullName>
    <description>Date and time at which the student completed the course</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>