force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Completed_Lesson_Count__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Completed_Lesson_Count__c</fullName>
    <description>The number of lessons completed by the Student</description>
    <label>Completed Lesson Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>