force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Contact to Course Progress</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skilljar Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>