force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>skilljar__Course__c</referenceTo>
    <relationshipLabel>Course_Progresses</relationshipLabel>
    <relationshipName>Course_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>