force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Credit_Unit_Plural__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Credit_Unit_Plural__c</fullName>
    <description>Plural name of the type of credit earned.</description>
    <inlineHelpText>For example &quot;Hours&quot;, &quot;Credits&quot;, &quot;Units&quot;</inlineHelpText>
    <label>Credit Unit Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>