force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Credits_Earned__c</fullName>
    <label>Credits Earned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>