force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Enrolled_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Enrolled_At__c</fullName>
    <inlineHelpText>Date and time at which the student first enrolled in the course.</inlineHelpText>
    <label>Enrolled At</label>
    <type>DateTime</type>
</CustomField>