force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Latest_Activity__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Latest_Activity__c</fullName>
    <description>Date and time of most recent lesson page view</description>
    <label>Latest Activity</label>
    <type>DateTime</type>
</CustomField>