force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Lead__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Lead to Course Progress</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Skilljar Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>