force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Lesson_Count__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lesson_Count__c</fullName>
    <description>Total number of lessons in the course</description>
    <label>Lesson Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>