force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Max_Score__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Max_Score__c</fullName>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>