force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Published_Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Published_Course__c</fullName>
    <label>Published Course</label>
    <referenceTo>skilljar__Published_Course__c</referenceTo>
    <relationshipLabel>Course Progresses</relationshipLabel>
    <relationshipName>Course_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>