force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipLabel>Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>