force-app/main/default/objects/skilljar__Course_Progress__c/fields/skilljar__Success_Status__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Success_Status__c</fullName>
    <description>Passed, Failed or None</description>
    <label>Success Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASSED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>