force-app/main/default/objects/skilljar__Course_Progress__c/listViews/skilljar__All.listView-meta.xml
<ListView>
    <fullName>skilljar__All</fullName>
    <columns>skilljar__Published_Course__c</columns>
    <columns>skilljar__Enrolled_At__c</columns>
    <columns>skilljar__Completed_At__c</columns>
    <columns>skilljar__Success_Status__c</columns>
    <columns>skilljar__Completed_Lesson_Count__c</columns>
    <columns>skilljar__Lesson_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>